<resources>
    <string name="app_name">Assign3</string>
    <string name="bar_add">Add</string>
    <string name="bar_edit">Edit</string>
    <string name="bar_remove">Remove</string>
    <string name="bar_done">Done</string>
    <string name="hello_world">Hello World</string>
    <string name="addressTitle">address-title</string>
    <string name="addressStreet">address-street</string>
    <string name="elevation">elevation</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="name">name</string>
    <string name="image">image</string>
    <string name="description">description</string>
    <string name="category">category</string>
    <string name="placeName">Place Name</string>
</resources>
