<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeName"
            android:layout_column="1"
            android:layout_row="0"
            android:padding="2dp"/>

        <EditText
            android:id="@+id/place_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:text="@string/placeName"
            android:layout_row="1"
            android:layout_column="1"/>

        <TextView
            android:id="@+id/add_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addressTitle"
            android:layout_column="0"
            android:layout_row="2"
            android:padding="2dp"/>

        <EditText
            android:id="@+id/add_title_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/addressTitle" />

        <TextView
            android:id="@+id/add_street"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addressStreet"
            android:layout_column="0"
            android:layout_row="3"
            android:padding="2dp"/>

        <EditText
            android:id="@+id/add_street_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/addressStreet" />

        <TextView
            android:id="@+id/elevation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elevation"
            android:layout_column="0"
            android:layout_row="4"
            android:padding="2dp"/>

        <EditText
            android:id="@+id/elevation_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/elevation" />

        <TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:layout_column="0"
            android:layout_row="5"
            android:padding="2dp"/>

        <EditText
            android:id="@+id/latitude_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/latitude" />

        <TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:layout_column="0"
            android:layout_row="6"
            android:padding="2dp"/>

        <EditText
            android:id="@+id/longitude_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/longitude" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_column="0"
            android:layout_row="7"
            android:padding="2dp"/>

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/placeName" />

        <TextView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image"
            android:layout_column="0"
            android:layout_row="8"
            android:padding="2dp"/>

        <EditText
            android:id="@+id/image_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/image" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_column="0"
            android:layout_row="9"
            android:padding="2dp"/>

        <EditText
            android:id="@+id/description_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/description" />

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:layout_column="0"
            android:layout_row="10"
            android:padding="2dp"/>

        <EditText
            android:id="@+id/category_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/category" />

    </GridLayout>

</android.support.v7.widget.LinearLayoutCompat>